Changelog
=========

1.1 (unreleased)
----------------

- Nothing changed yet.


1.0 (2010-12-21)
----------------

- Initial release